[gd_scene load_steps=3 format=3 uid="uid://c5scjt2dagqa6"]

[ext_resource type="Script" path="res://Scripts/story.gd" id="1_qo7qm"]
[ext_resource type="FontFile" uid="uid://bsel54ud03407" path="res://Fonts/Comic Sans MS/COMIC.TTF" id="2_u8f6n"]

[node name="Story" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qo7qm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.882353, 0.882353, 0.882353, 1)

[node name="Chef" type="Sprite2D" parent="."]
centered = false

[node name="StoryOutput" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -265.0
offset_right = -70.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_u8f6n")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true

[node name="StoryOutputBackground" type="ColorRect" parent="StoryOutput"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.611765, 0.611765, 0.611765, 1)

[node name="Next" type="Button" parent="StoryOutput"]
offset_left = 937.0
offset_top = 166.0
offset_right = 1011.0
offset_bottom = 197.0
text = "Next"

[node name="Continue" type="Button" parent="StoryOutput"]
visible = false
offset_left = 937.0
offset_top = 166.0
offset_right = 1011.0
offset_bottom = 197.0
text = "Continue"

[connection signal="pressed" from="StoryOutput/Next" to="." method="_next_dialogue"]
[connection signal="pressed" from="StoryOutput/Continue" to="." method="_on_continue_pressed"]
